@@ -161,6 +161,8 @@ enum {
 #define MEMKIND_REALLOC_EV        40000047
 #define MEMKIND_POSIX_MEMALIGN_EV 40000048
 #define MEMKIND_FREE_EV           40000049
+#define ADD_RESERVED_MEM_EV       40000069
+#define SUB_RESERVED_MEM_EV       40000070
 #define MEMKIND_PARTITION_EV      40001000
 #define KMPC_MALLOC_EV            40000062
 #define KMPC_FREE_EV              40000063
